fixed curl inspecting letter address not contents

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -30,18 +30,19 @@ jobs:
           docker compose -f docker-compose.test.yml up --build -d
 
       # 5) Wait until API responds
-      - name: Wait for API
+      - name: Wait for API (allow 401)
         run: |
           for i in {1..30}; do
+            # -s: silent, -o /dev/null: discard body, -w "%{http_code}": write status
             status=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8000/api/models/)
             if [[ "$status" == "200" || "$status" == "401" ]]; then
-              echo "API is up (status $status)"
+              echo "✅ API is up (status $status)"
               exit 0
             fi
-            echo "Waiting for API… ($status)"
+            echo "⏳ Waiting for API… (status $status)"
             sleep 2
           done
-          echo "❌ API did not become ready"
+          echo "❌ API did not become ready in time"
           docker compose -f docker-compose.test.yml logs api
           exit 1
 
