--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -31,6 +31,7 @@ jobs:
 
       # 5) Wait until API responds
       - name: Verify "api" container is up
+        working-directory: server
         run: |
           # This will print something like:
           #    Name   Command   Service   Status            Ports
