--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -42,23 +42,43 @@ jobs:
           docker compose -f docker-compose.test.yml logs api
           exit 1
 
-      - name: Verify "api" container is Up
+      - name: Verify "api_test" container is up
         working-directory: server
         run: |
-          if ! docker compose -f docker-compose.test.yml ps api | grep -qw Up; then
-            echo "❌ api container failed to stay Up"
-            docker compose -f docker-compose.test.yml logs api
+          # Look for any container (running or stopped) named exactly "api_test"
+          CID=$(docker ps -aq -f "name=^api_test$")
+          if [ -z "$CID" ]; then
+            echo "❌ Could not find a container named api_test"
+            docker ps -a
             exit 1
           fi
-          echo "✅ api container is Up"
+
+          # Check that it's running
+          if ! docker inspect --format='{{.State.Running}}' $CID | grep -q true; then
+            echo "❌ api_test container is not running (it may have exited)"
+            echo "→ State: $(docker inspect --format='{{.State.Status}}' $CID)'"
+            echo "----- logs -----"
+            docker logs $CID || true
+            exit 1
+          fi
+
+          echo "✅ api_test container ($CID) is running"
 
 
       - name: Extract SDK_TEST_TOKEN from file
         working-directory: server
         run: |
-          # copy the token file out by container name
-          docker cp api_test:/tmp/uploader_token.txt uploader_token.txt
-      
+          CID=$(docker ps -aq -f "name=^api_test$")
+          echo "📦 Using container $CID"
+
+          # List /tmp so we can see exactly what's there
+          echo "Contents of /tmp in api_test:"
+          docker exec $CID ls -la /tmp || true
+
+          # Copy the token
+          docker cp $CID:/tmp/uploader_token.txt uploader_token.txt
+
+          # Read and export
           TOKEN=$(cat uploader_token.txt)
           echo "✅ Got SDK_TEST_TOKEN=$TOKEN"
           echo "SDK_TEST_TOKEN=$TOKEN" >> $GITHUB_ENV
