changed debug step

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,23 +27,15 @@ jobs:
         working-directory: server
         run: docker compose -f docker-compose.test.yml up --force-recreate -d
 
-      - name: Debug API startup logs
+      - name: Dump entrypoint script & full logs
         working-directory: server
         run: |
-          echo "🔍 Dumping compose logs for service 'api':"
-          docker compose -f docker-compose.test.yml logs api || true
+          CID=$(docker ps -aq -f "name=^api_test$")
+          echo "🔍 /app/docker-entrypoint.sh contents:"
+          docker exec $CID cat /app/docker-entrypoint.sh || true
           echo
-          echo "🔍 Dumping docker logs for container 'api_test':"
-          docker logs --timestamps api_test || true
-          echo
-          docker inspect api_test --format='Entrypoint: {{.Config.Entrypoint}} Cmd: {{.Config.Cmd}}'
-          echo "🔍 Searching logs for token-write confirmation:"
-          if (docker compose -f docker-compose.test.yml logs api; docker logs api_test) 2>&1 | grep -q 'Wrote token to'; then
-            echo "✅ Found the write confirmation in the logs."
-          else
-            echo "❌ No 'Wrote token to' message — your create_uploader may not be running."
-            exit 1
-          fi
+          echo "🔍 Full timestamped logs:"
+          docker logs --timestamps $CID || true
 
       - name: Wait for API to bind port 8000
         working-directory: server
